feat Se modifican features

--- a/serenity.properties
+++ b/serenity.properties
@@ -11,6 +11,6 @@ appium.automationName=uiautomator2
 #appium.fullReset=true
 appium.appActivity=com.booking.startup.HomeActivity
 appium.appPackage=com.booking
-appium.app=/Users/candyespinzabaez/Downloads/booking-com-32-9.apk
+appium.app=C://Users/Candy/Documents/apk/booking-com-32-9 (1).apk
 #serenity.take.screenshots=FOR_FAILURES
 serenity.take.screenshots=BEFORE_AND_AFTER_EACH_STEP
